fixed image overlap issue. To Do: link styling, hover effects, text overlay on work projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ header{
     margin: 0 auto;
 }
 h1 {
+    display: flex;
     font-size: 150%;
 }
 
@@ -79,26 +80,28 @@ aside{
 /* main project */
 #showcase {
     flex: 0 0 100%;
-    padding-left: 1%;
-    padding-bottom: 3%;
-    margin-bottom: 1%;
+    padding-left: .5em;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
 }
-#showcaseProject{
+
+#showcaseTitle{
     display: flex;
     position: relative;
-    margin-bottom: -2rem;
+    justify-content: space-between;
+    margin-bottom: -2em;
     margin-left: .5rem;
     margin-right: 80%;
     
 }
 img {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
 }
 /* small projects */
 .smallProject{
     flex: 0 0 45%;
-    padding-left: 1%;
+    padding-left: .5em;
     padding-bottom: 3%;
 }
 
@@ -108,12 +111,15 @@ img {
 
 #contactLinks {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     list-style-type: none;
     padding-left: 1%;
 }
 
 #contactLinks li {
-    padding: 0 10px;  
+    padding: 0 10px; 
+
 }
 
 
@@ -137,5 +143,8 @@ footer {
     100%{text-align: center;}  
 }
 
-
-
+@media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+    }
+}
